--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -1,9 +1,9 @@
 {
   "generator-node": {
     "promptValues": {
-      "authorName": "Upendo Ventures",
-      "authorEmail": "support@upendoventures.com",
-      "authorUrl": "https://upendoventures.com"
+      "authorName": "Gerald Ncube",
+      "authorEmail": "me@geraldncube.co.uk",
+      "authorUrl": "https://geraldncube.co.uk"
     }
   }
 }
