--- a/generators/webforms/templates/Module.csproj
+++ b/generators/webforms/templates/Module.csproj
@@ -173,12 +173,10 @@
     <Content Include="Providers\DataProviders\SqlDataProvider\Uninstall.SqlDataProvider" />
     <Content Include="Edit.ascx" />
     <Content Include="License.txt" />
-    <Content Include=""
-      <%= extensionName %>.dnn">
+    <Content Include="<%= extensionName %>.dnn">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include=""
-      <%= extensionName %>_Symbols.dnn">
+    <Content Include="<%= extensionName %>_Symbols.dnn">
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Module.build">
