--- a/generators/webforms/templates/Module.csproj
+++ b/generators/webforms/templates/Module.csproj
@@ -6,18 +6,12 @@
     <ProductVersion>
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>
-      {<%= guid %>}
-    </ProjectGuid>
+    <ProjectGuid>{<%= guid %>}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>
-      <%= fullNamespace %>
-    </RootNamespace>
-    <AssemblyName>
-      <%= fullNamespace %>
-    </AssemblyName>
+    <RootNamespace><%= fullNamespace %></RootNamespace>
+    <AssemblyName><%= fullNamespace %></AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <UseIISExpress>false</UseIISExpress>
     <IISExpressSSLPort />
@@ -37,9 +31,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>
-      bin\<%= fullNamespace %>.xml
-    </DocumentationFile>
+    <DocumentationFile>bin\<%= fullNamespace %>.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -49,9 +41,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <DocumentationFile>
-      bin\<%= fullNamespace %>.xml
-    </DocumentationFile>
+    <DocumentationFile>bin\<%= fullNamespace %>.xml</DocumentationFile>
   </PropertyGroup>
   <Import Project="..\..\Build\SolutionReferences.targets" />
   <ItemGroup>
