installed npm install ejs-lint

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "chalk": "^2.4.2",
     "dotnet-solution": "^0.2.0",
+    "ejs-lint": "^1.0.1",
     "pascal-case": "^2.0.1",
     "update-notifier": "^2.5.0",
     "uuid-v4": "^0.1.0",
