--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-gsndnn",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "description": "Scaffolds DNN extensions, including Modules (Webforms, SPA, and MVC), Persona Bar, Skin Object, Library, Scheduler, and Hotcakes Commerce projects (based on the generator built by Matt Rutledge).",
   "homepage": "https://github.com/gncube",
   "author": "Gerald Ncube <me@geraldncube.co.uk> (https://geraldncube.co.uk)",
@@ -14,7 +14,7 @@
     "dotnetnuke",
     "dnncms",
     "evoq",
-    "upendo"
+    "gsn"
   ],
   "devDependencies": {
     "eslint": "^5.12.0",
