--- a/generators/solution/templates/web.config
+++ b/generators/solution/templates/web.config
@@ -1,4 +1,4 @@
-﻿<configuration>
+<configuration>
   <!-- register local configuration handlers -->
   <configSections>
     <sectionGroup name="dotnetnuke">
@@ -32,11 +32,7 @@
   </configSections>
 
   <connectionStrings>
-    <!-- Connection String for SQL Server 2008/2012 Express -->
-    <add name="SiteSqlServer" connectionString="Data Source=.\SQLExpress;Integrated Security=True;User Instance=True;AttachDBFilename=|DataDirectory|Database.mdf;" providerName="System.Data.SqlClient"/>
-    <!-- Connection String for SQL Server 2008/2012
     <add name="SiteSqlServer" connectionString="Server=(local);Database=DotNetNuke;uid=;pwd=;" providerName="System.Data.SqlClient" />
-    -->
   </connectionStrings>
 
   <appSettings>
