--- a/generators/webforms/templates/Module.csproj
+++ b/generators/webforms/templates/Module.csproj
@@ -78,6 +78,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Components\FeatureController.cs" />
+    <Compile Include="Components\GlobalConstants.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
     <Compile Include="Components\ModuleBase.cs">
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
@@ -85,9 +88,13 @@
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Controllers\ExampleInfoController.cs" />
+    <Compile Include="Controllers\ExampleSubscriberInfoController.cs" />
     <Compile Include="Entities\Interfaces\IExampleInfo.cs" />
+    <Compile Include="Entities\Interfaces\IExampleSubscriberInfo.cs" />
     <Compile Include="Entities\ExampleInfo.cs" />
+    <Compile Include="Entities\ExampleSubscriberInfo.cs" />
     <Compile Include="Entities\ExampleInfoRepository.cs" />
+    <Compile Include="Entities\ExampleSubscriberInfoRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Edit.ascx.cs">
       <DependentUpon>Edit.ascx</DependentUpon>
