--- a/generators/mvc-spa/templates/Module.csproj
+++ b/generators/mvc-spa/templates/Module.csproj
@@ -46,15 +46,15 @@
   </PropertyGroup>
   <Import Project="..\..\Build\SolutionReferences.targets" />
   <ItemGroup>
-    <PackageReference Include="DotNetNuke.Core" Version="9.2.1.533" />
-    <PackageReference Include="DotNetNuke.Instrumentation" Version="9.2.1.533" />
-    <PackageReference Include="DotNetNuke.Web" Version="9.2.1.533" />
-    <PackageReference Include="DotNetNuke.Web.Mvc" Version="9.2.1.533" />
-    <PackageReference Include="DotNetNuke.Web.Client" Version="9.2.1.533" />
-    <PackageReference Include="DotNetNuke.Web.Deprecated" Version="9.2.1.533" />
-    <PackageReference Include="DotNetNuke.WebApi" Version="9.2.1.533" />
-    <PackageReference Include="Newtonsoft.Json" Version="7.0.1" />
-    <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.1.2" />
+    <PackageReference Include="DotNetNuke.Core" Version="9.3.2" />
+    <PackageReference Include="DotNetNuke.Instrumentation" Version="9.3.2" />
+    <PackageReference Include="DotNetNuke.Web" Version="9.3.2" />
+    <PackageReference Include="DotNetNuke.Web.Mvc" Version="9.3.2" />
+    <PackageReference Include="DotNetNuke.Web.Client" Version="9.3.2" />
+    <PackageReference Include="DotNetNuke.Web.Deprecated" Version="9.3.2" />
+    <PackageReference Include="DotNetNuke.WebApi" Version="9.3.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.1.3" />
     <PackageReference Include="Microsoft.AspNet.Razor" Version="3.1.2" />
     <PackageReference Include="Microsoft.AspNet.WebPages" Version="3.1.2" />
     <PackageReference Include="Microsoft.Web.Infrastructure" Version="1.0.0.0" />
@@ -82,7 +82,11 @@
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
-    <Reference Include="System.Web.Http" />
+    <Reference Include="System.Web.Http">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>$(DnnReferencePath)\System.Web.Http.dll</HintPath>
+      <Private>False</Private>
+	  </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
