--- a/generators/webforms/templates/Module.csproj
+++ b/generators/webforms/templates/Module.csproj
@@ -45,13 +45,13 @@
   </PropertyGroup>
   <Import Project="..\..\Build\SolutionReferences.targets" />
   <ItemGroup>
-    <PackageReference Include="DotNetNuke.Core" Version="9.2.1.533" />
-    <PackageReference Include="DotNetNuke.Instrumentation" Version="9.2.1.533" />
-    <PackageReference Include="DotNetNuke.Web" Version="9.2.1.533" />
-    <PackageReference Include="DotNetNuke.Web.Client" Version="9.2.1.533" />
-    <PackageReference Include="DotNetNuke.Web.Deprecated" Version="9.2.1.533" />
-    <PackageReference Include="DotNetNuke.WebApi" Version="9.2.1.533" />
-    <PackageReference Include="Newtonsoft.Json" Version="7.0.1" />
+    <PackageReference Include="DotNetNuke.Core" Version="9.3.2" />
+    <PackageReference Include="DotNetNuke.Instrumentation" Version="9.3.2" />
+    <PackageReference Include="DotNetNuke.Web" Version="9.3.2" />
+    <PackageReference Include="DotNetNuke.Web.Client" Version="9.3.2" />
+    <PackageReference Include="DotNetNuke.Web.Deprecated" Version="9.3.2" />
+    <PackageReference Include="DotNetNuke.WebApi" Version="9.3.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Hotcakes.Commerce">
@@ -78,10 +78,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Components\FeatureController.cs" />
-    <Compile Include="Components\GlobalConstants.cs">
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Components\ModuleBase.cs">
+    <Compile Include="Components\GlobalConstants.cs"/>
+      <Compile Include="Components\ModuleBase.cs">
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Components\ModuleSettingsBase.cs">
@@ -173,8 +171,8 @@
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
   </PropertyGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!--<Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v<%= msBuildVersion %>.0\WebApplications\Microsoft.WebApplication.targets" />-->
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v13.0\WebApplications\Microsoft.WebApplication.targets" Condition="false" />
   <ProjectExtensions>
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
